Try fix .appveyor.yml

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,7 +1,7 @@
 install:
   - ps: iex (new-object net.webclient).downloadstring('https://get.scoop.sh')
-  - cmd: scoop bucket add extras
-  - cmd: scoop install visualc rktools2k3
+  - ps: scoop bucket add extras
+  - ps: scoop install visualc rktools2k3
 build_script:
   - cmd: cl fastlist.cpp
 test_script:
