--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,7 +1,6 @@
 install:
-  - ps: if ((Get-Command scoop -ErrorAction SilentlyContinue) -eq $null) { iex (new-object net.webclient).downloadstring('https://get.scoop.sh') }
+  - ps: iex (new-object net.webclient).downloadstring('https://get.scoop.sh')
   - ps: scoop bucket add extras
-  - ps: scoop update *
   - ps: scoop install visualc rktools2k3
 build_script:
   - cl fastlist.cpp
@@ -9,5 +8,3 @@ test_script:
   - tasklist
   - fastlist
   - bench 100
-cache:
-  - '%USERPROFILE%\scoop'
